[gd_scene load_steps=23 format=2]

[ext_resource path="res://assets/Material Duck Hunt/cenariotras.png" type="Texture" id=1]
[ext_resource path="res://assets/Material Duck Hunt/cenariofrente.png" type="Texture" id=2]
[ext_resource path="res://cenas/topo.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/Main.gd" type="Script" id=4]
[ext_resource path="res://cenas/alvo.tscn" type="PackedScene" id=5]
[ext_resource path="res://cenas/chao.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/Material Duck Hunt/cao/captura.png" type="Texture" id=7]
[ext_resource path="res://assets/Material Duck Hunt/cao/rindo.png" type="Texture" id=8]
[ext_resource path="res://assets/Material Duck Hunt/hud.png" type="Texture" id=9]
[ext_resource path="res://assets/Material Duck Hunt/PressStart2P.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://assets/Material Duck Hunt/sons/cao_captura.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/Material Duck Hunt/sons/colidiu.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/Material Duck Hunt/sons/cao_rindo.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/Material Duck Hunt/sons/flyaway.wav" type="AudioStream" id=14]
[ext_resource path="res://assets/Material Duck Hunt/sons/round.wav" type="AudioStream" id=15]
[ext_resource path="res://cenas/egg.tscn" type="PackedScene" id=16]
[ext_resource path="res://assets/toasty_tfCWsU6.mp3" type="AudioStream" id=17]

[sub_resource type="Animation" id=1]
resource_name = "captura"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("captura:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 380, 550 ), Vector2( 380, 430 ), Vector2( 380, 550 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "rindo"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("rindo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 380, 550 ), Vector2( 380, 430 ), Vector2( 380, 550 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 19
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 10 )

[sub_resource type="Animation" id=5]
resource_name = "appear"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 841.846, 615 ), Vector2( 750, 615 ), Vector2( 650, 615 ), Vector2( 750, 615 ), Vector2( 850, 615 ) ]
}

[node name="Main" type="Node2D"]
script = ExtResource( 4 )

[node name="audio_toasty" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 850, 615 )
scale = Vector2( 0.059, 0.059 )
stream = ExtResource( 17 )

[node name="Sprite" type="Sprite" parent="."]
z_index = -3
texture = ExtResource( 1 )
centered = false

[node name="Sprite2" type="Sprite" parent="."]
z_index = 1
texture = ExtResource( 2 )
centered = false

[node name="alvo" parent="." instance=ExtResource( 5 )]
position = Vector2( 370.019, 338.025 )

[node name="gerapato" type="Timer" parent="."]
one_shot = true

[node name="espera" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="topo" parent="." instance=ExtResource( 3 )]
position = Vector2( 382.382, -130.327 )

[node name="chao" parent="." instance=ExtResource( 6 )]
position = Vector2( 381.899, 835.928 )

[node name="captura" type="Sprite" parent="."]
position = Vector2( 380, 550 )
texture = ExtResource( 7 )

[node name="rindo" type="Sprite" parent="."]
position = Vector2( 380, 550 )
texture = ExtResource( 8 )

[node name="cao" type="AnimationPlayer" parent="."]
anims/captura = SubResource( 1 )
anims/rindo = SubResource( 2 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Sprite" type="Sprite" parent="HUD"]
position = Vector2( 387.365, 685.207 )
texture = ExtResource( 9 )

[node name="Label" type="Label" parent="HUD"]
margin_left = 353.365
margin_top = 661.207
margin_right = 424.365
margin_bottom = 710.207
custom_fonts/font = SubResource( 3 )
text = "000"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="copyright" type="Label" parent="HUD"]
margin_left = 3.72607
margin_top = 704.477
margin_right = 230.726
margin_bottom = 718.477
text = "Rafael Rodrigo Silveira - 14/05/2021"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_txt_versao" type="Label" parent="HUD"]
margin_left = 662.331
margin_top = 698.528
margin_right = 733.331
margin_bottom = 712.528
text = "Vers√£o: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_pontos" type="Label" parent="HUD"]
margin_left = 341.291
margin_top = 631.786
margin_right = 437.291
margin_bottom = 647.786
custom_fonts/font = SubResource( 4 )
text = "Pontos"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="verao_label" type="Label" parent="HUD"]
margin_left = 719.425
margin_top = 698.944
margin_right = 759.425
margin_bottom = 712.944
text = "0.0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cao_captura" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )

[node name="cao_rindo" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )

[node name="colidiu" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )

[node name="flyaway" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )

[node name="novoturno" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 15 )

[node name="egg" parent="." instance=ExtResource( 16 )]
position = Vector2( 850, 615 )
scale = Vector2( 0.059, 0.059 )
z_index = 3

[node name="egg_appear" type="AnimationPlayer" parent="egg"]
anims/appear = SubResource( 5 )

[node name="egg_appear_time" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[connection signal="timeout" from="gerapato" to="." method="_on_gerapato_timeout"]
[connection signal="timeout" from="espera" to="." method="_on_espera_timeout"]
[connection signal="body_entered" from="topo" to="." method="_on_topo_body_entered"]
[connection signal="body_entered" from="chao" to="." method="_on_chao_body_entered"]
[connection signal="animation_finished" from="egg/egg_appear" to="." method="_on_egg_appear_animation_finished"]
[connection signal="timeout" from="egg_appear_time" to="." method="_on_egg_appear_time_timeout"]
